add notify task
